--- a/service/package.json
+++ b/service/package.json
@@ -1,20 +1,27 @@
 {
-    "name": "ProductRecommendationsAPI",
-    "version": "1.0.0",
-    "description": "NodeJS Express Boilerplate",
-    "main": "server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "scripts": {
-        "start": "node server.js"
-    },
-    "dependencies": {
-        "cookie-parser": "1.4.5",
-        "cors": "2.8.5",
-        "express": "4.17.1",
-        "morgan": "1.10.0",
-        "multer": "1.4.2"
-    }
+  "name": "productrecommendationsapi",
+  "version": "2.0.0",
+  "description": "NodeJS Express Boilerplate",
+  "main": "server.js",
+  "test": "echo \"Error: no test specified\" && exit 1",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "cookie-parser": "1.4.5",
+    "cors": "2.8.5",
+    "express": "4.17.1",
+    "morgan": "1.10.0",
+    "multer": "1.4.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/saandeep/postman-demos.git"
+  },
+  "author": "Sandeep Murusupalli",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/saandeep/postman-demos/issues"
+  },
+  "homepage": "https://github.com/saandeep/postman-demos#readme"
 }
-
-
-
